Replace LinkedList with ArrayList where appropriate
LinkedList has higher memory overhead (each element is a separately
allocated node with two pointers) and poor cache locality compared
to ArrayList, which stores elements in a contiguous array. For the
access patterns in the changed files — append-only lists and LIFO
stacks operating at the tail — ArrayList provides better performance
since all operations are O(1) amortized with no per-element allocation
overhead.

CapacityFiller and PoolFiller are intentionally left unchanged as they
use FIFO queue semantics (removeFirst), where LinkedList's O(1) head
removal outperforms ArrayList's O(n) array shift.